--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,10 @@
             <artifactId>fj</artifactId>
             <version>2.18</version>
         </dependency>
+        <dependency>
+            <groupId>vuze</groupId>
+            <artifactId>vuze</artifactId>
+            <version>4700</version>
+        </dependency>
     </dependencies>
 </project>
