--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <developer>
             <id>tomamic</id>
             <name>Michele Tomaiuolo</name>
-            <email>...</email>
+            <email>tomamic@ce.unipr.it</email>
             <roles>
                 <role>architect</role>
                 <role>developer</role>
@@ -70,7 +70,7 @@
     <pluginRepositories>
         <pluginRepository>
           <id>Codehaus Snapshots</id>
-          <url>http://repository.codehaus.org/releases/</url>
+          <url>http://nexus.codehaus.org/snapshots/</url>
           <snapshots>
             <enabled>true</enabled>
           </snapshots>
@@ -103,7 +103,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>1.2</version>
 
                 <executions>
                     <execution>
@@ -191,11 +191,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.functionaljava</groupId>
-            <artifactId>fj</artifactId>
-            <version>2.18</version>
-        </dependency>
-        <dependency>
             <groupId>vuze</groupId>
             <artifactId>vuze</artifactId>
             <version>4700</version>
@@ -209,7 +204,7 @@
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
