--- a/blogracy-vuze/pom.xml
+++ b/blogracy-vuze/pom.xml
@@ -18,6 +18,21 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>org.gudy.azureus2.ui.swt.Main</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
   <dependencies>
@@ -26,6 +41,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>vuze</groupId>
