--- a/blogracy-web/pom.xml
+++ b/blogracy-web/pom.xml
@@ -59,7 +59,7 @@
     <resources>
       <resource>
         <directory>src/main/config</directory>
-        <filtering>true</filtering>
+        <!--filtering>true</filtering-->
       </resource>
       <resource>
         <directory>src/main/resources</directory>
