--- a/blogracy-vuze/pom.xml
+++ b/blogracy-vuze/pom.xml
@@ -7,6 +7,12 @@
   <name>blogracy-vuze</name>
   <url>http://maven.apache.org</url>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+	<targetPath>../</targetPath>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -23,7 +29,9 @@
         <version>1.2.1</version>
         <configuration>
           <executable>java</executable>
+          <workingDirectory>target/</workingDirectory>
           <arguments>
+            <argument>-Dazureus.config.path=./</argument>
             <argument>-classpath</argument>
             <classpath/>
             <argument>net.blogracy.Blogracy</argument>
